--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -72,9 +72,13 @@ h1 {
 }
 
 h2 {
-  margin: 0.25em 0;
+  margin: 1.5em 0 0.25em 0;
   padding: 0;
   font-size: 1.1em;
+}
+
+h2, h3, h4, h5, h6 {
+    font-family: Arial, helvetica, sans-serif;
 }
 
 .caret {
